--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
         <meta name="description" content="">
         <meta name="author" content="">
         <title>Unischeduler</title>
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/main.css?v=@version@">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     </head>
     <body>
         <div id="react"></div>
-        <script src="js/app.js"></script>
+        <script src="js/app.js?v=@version@"></script>
     </body>
 </html>
