Cleaned up package.json and added versionAppend (again)
In the update process of dependencies the versionAppend got lost.
Added it again. Tested the build. It seems that if react is parsed with
env set to production the perf will increase significantly.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
         <meta name="description" content="">
         <meta name="author" content="">
         <title>Unischeduler</title>
-        <link rel="stylesheet" href="dist/styles/main.css?v=@version@">
+        <!-- build:css -->
+        <link rel="stylesheet" href="dist/styles/main.css">
+        <!-- endbuild -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     </head>
     <body>
         <div id="react"></div>
-        <script src="dist/js/app.js?v=@version@"></script>
+        <!-- build:js -->
+        <script src="dist/js/app.js"></script>
+        <!-- endbuild -->
     </body>
 </html>
